...
            android:layout_alignParentStart="true"
            android:background = "@null"
            android:src="@drawable/ic_clear_black_48dp"/>

        <!-- play button -->
        <ImageButton
            android:id="@+id/play_dialog"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:background = "@null"
            android:src="@drawable/ic_play_circle_outline_black_48dp"/>

        <!-- confirm button -->
        <ImageButton
            android:id="@+id/accept_dialog"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom"
            android:background = "@null"
...
